--- a/ionic-sample/ionic-sample.html
+++ b/ionic-sample/ionic-sample.html
@@ -49,7 +49,7 @@
     </header>
     <ion-content has-header="true" scroll="false">
       <ion-list>
-        <ion-item ng-repeat="project in Projects" ng-click="Session.set('activeProject', project)" ng-class="{active: Session.get('activeProject') == project}">
+        <ion-item ng-repeat="project in Projects" ng-click="sideMenuController.close();Session.set('activeProject', project)" ng-class="{active: Session.get('activeProject') == project}">
           [[project.title]]
         </ion-item>
       </ion-list>
